moved to ravendb and worked on the home page style

--- a/src/Bloggy.Client.Web/Content/bloggy-main.css
+++ b/src/Bloggy.Client.Web/Content/bloggy-main.css
@@ -1,12 +1,14 @@
-﻿.navbar > .navbar-inner > .container {
+﻿pre {
+  width: 100%!important;
+  margin: 0!important;
+  padding: 2.5px;
+}
+.navbar > .navbar-inner > .container {
   max-width: 1170px;
 }
 .navbar {
   margin-bottom: 0;
 }
-/*.navbar .nav-collapse {
-    float: right;
-}*/
 #main {
   padding: 20px;
   background-color: #fff;
@@ -19,13 +21,66 @@
   border-top: none;
 }
 #main #content {
-  border-right: 1px solid #eee;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 #main #side div.row {
   margin-bottom: 15px;
+}
+.blog-post-list-item .item-header {
+  padding-bottom: 10px;
+  margin-bottom: 15px;
+  border-bottom: 1px solid #eee;
+}
+.blog-post-list-item .item-header h4.title {
+  margin: 0;
+  margin-bottom: 5px;
+}
+.blog-post-list-item .item-header h4.title a {
+  font-size: 20px;
+}
+.blog-post-list-item .item-header h4.title a:hover {
+  text-decoration: none;
+}
+.blog-post-list-item .item-header div.brief-info {
+  font-style: italic;
+  margin-bottom: 10px;
+}
+.blog-post-list-item div.content {
+  border-bottom: 3px solid #eee;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+  /*.code-wrapper {
+
+            background-color: White;
+            border: 1px solid gray;
+            padding-left: 15px;
+            padding-right: 150px;
+            margin: 15px 0;
+            font-size: 14px;
+            word-wrap: break-word;
+        }
+
+        .border-shadow-1 {
+
+            -moz-box-shadow: 0 0 5px #888;
+            -webkit-box-shadow: 0 0 5px#888;
+            box-shadow: 0 0 5px #888;
+        }*/
+
+}
+.blog-post-list-item div.content h2,
+.blog-post-list-item div.content h3 {
+  line-height: 30px;
+}
+.blog-post-list-item div.content .code-wrapper {
+  margin-bottom: 10px;
+}
+.blog-post-list-item:last-of-type div.content {
+  border-bottom: none;
+  padding-bottom: 0;
+  margin-bottom: 0;
 }
 #badge-list {
   margin: 0;
@@ -67,4 +122,15 @@ input[type=password].input-validation-error {
 input[type=text].input-validation-error:focus,
 input[type=password].input-validation-error:focus {
   border-color: #bbbbbb;
+}
+@media (max-width: 767px) {
+  #content {
+    border-bottom: 1px solid #eee;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+  }
+  .blog-post-list-item .item-header div.misc div.misc-item {
+    text-align: center;
+    margin-bottom: 5px;
+  }
 }
