--- a/src/Bloggy.Client.Web/Views/Account/Login.cshtml
+++ b/src/Bloggy.Client.Web/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-@model Bloggy.Client.Web.Models.LoginRequestModel
+@model Bloggy.Client.Web.RequestModels.LoginRequestModel
 @{
     ViewBag.Title = "Login";
 }
