completed the blogpost comment post logic. fixes #1

--- a/src/Bloggy.Client.Web/Content/bloggy-main.less
+++ b/src/Bloggy.Client.Web/Content/bloggy-main.less
@@ -34,7 +34,7 @@
     #side {
 
         div.row {
-            margin-bottom: 15px;
+            margin-bottom: 5px;
         }
     }
 }
@@ -109,6 +109,14 @@
             padding-bottom: 0;
             margin-bottom: 0;
         }
+    }
+}
+
+.form-horizontal {
+
+    .control-label {
+        
+        text-align: left;
     }
 }
 
