--- a/src/Bloggy.Client.Web/Content/bloggy-main.css
+++ b/src/Bloggy.Client.Web/Content/bloggy-main.css
@@ -26,7 +26,7 @@
   box-sizing: border-box;
 }
 #main #side div.row {
-  margin-bottom: 15px;
+  margin-bottom: 5px;
 }
 .blog-post-list-item .item-header {
   padding-bottom: 10px;
@@ -81,6 +81,9 @@
   border-bottom: none;
   padding-bottom: 0;
   margin-bottom: 0;
+}
+.form-horizontal .control-label {
+  text-align: left;
 }
 #badge-list {
   margin: 0;
