completed the display of comments

--- a/src/Bloggy.Client.Web/Content/bloggy-main.less
+++ b/src/Bloggy.Client.Web/Content/bloggy-main.less
@@ -112,6 +112,35 @@
     }
 }
 
+.comment-list-container {
+
+    .comment-container {
+        padding: 10px;
+        margin-bottom: 5px;
+        border: 1px solid #CCCCCC;
+        background-color: #E9F7FD;
+
+        .comment-gravatar-container {
+            float: left;
+            margin-bottom: 5px;
+            margin-right: 10px;
+        }
+
+        .comment-content-container {
+
+            .comment-content-header {
+                padding-bottom: 10px;
+                font-style: italic;
+            }
+        }
+    }
+
+    .comment-container-by-author {
+        border: 1px solid #E7D59C;
+        background-color: #FBFFD4;
+    }
+}
+
 .form-horizontal {
 
     .control-label {
