fixed the header links

--- a/src/Bloggy.Client.Web/Views/Shared/_TopHeaderPartial.cshtml
+++ b/src/Bloggy.Client.Web/Views/Shared/_TopHeaderPartial.cshtml
@@ -10,13 +10,13 @@
             <div class="nav-collapse collapse">
                 <ul class="nav">
                     <li class="">
-                        <a href="#">Home</a>
+                        <a href="@Url.Action("index", "default")">Blog</a>
                     </li>
                     <li class="">
-                        <a href="#">Blog</a>
+                        <a href="@Url.Action("index", "about")">About</a>
                     </li>
                     <li class="">
-                        <a href="#">About</a>
+                        <a href="@Url.Action("index", "contact")">Contact</a>
                     </li>
                 </ul>
             </div>
