added the root RSS feed

--- a/src/Bloggy.Client.Web/Views/Shared/_Layout.cshtml
+++ b/src/Bloggy.Client.Web/Views/Shared/_Layout.cshtml
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    <link rel="alternate" type="application/rss+xml" title="Tugberk Ugurlu&#39;s Blog" href="@Url.Action("rss", "feeds")" />
+    <link rel="alternate" type="application/rss+xml" title="Tugberk Ugurlu&#39;s Blog (On FeedBurner)" href="http://feeds.feedburner.com/TugberkUgurlu" />
     @Styles.Render("~/Content/css")
 </head>
 <body itemscope itemtype="http://schema.org/WebPage">
