completed the Bloggy.Client.Web.Migrator app

--- a/src/Bloggy.Client.Web/Views/BlogPost/Index.cshtml
+++ b/src/Bloggy.Client.Web/Views/BlogPost/Index.cshtml
@@ -49,7 +49,9 @@
 </div>
 
 <div class="row comment-list-container blog-post-comment-list-container">
-    <h3>@StringResources.Comments</h3>
+    <div class="span9">
+        <h3>@StringResources.Comments</h3>
+    </div>
     @foreach (var comment in Model.Comments)
     {
         <div class="span9">
