ManagementUserCreation is now in a working shape. Also added LogOff support

--- a/src/Bloggy.Client.Web/Views/Shared/_TopHeaderPartial.cshtml
+++ b/src/Bloggy.Client.Web/Views/Shared/_TopHeaderPartial.cshtml
@@ -20,6 +20,10 @@
                     </li>
                 </ul>
             </div>
+            <div class="pull-right">
+                @Html.Partial("_LoginPartial")
+            </div>
+            <div class="clearfix"></div>
         </div>
     </div>
 </div>
