--- a/src/Bloggy.Client.Web/Views/Account/CreateManagementUser.cshtml
+++ b/src/Bloggy.Client.Web/Views/Account/CreateManagementUser.cshtml
@@ -14,6 +14,7 @@
     <div class="span9">
         @using (Html.BeginForm())
         {
+            @Html.AntiForgeryToken()
             @Html.ValidationSummary(false)
             
             <div>
