--- a/src/Bloggy.Client.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/Bloggy.Client.Web/Views/Shared/_LoginPartial.cshtml
@@ -5,12 +5,15 @@
     {
         @Html.AntiForgeryToken()
 
-        <ul class="nav navbar-nav navbar-right">
-            <li>
+    <ul class="nav navbar-nav navbar-right">
+        <li>
+            @if (User.IsInRole(ApplicationRoles.AdminRole))
+            {
                 @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Manage", "Account", routeValues: null, htmlAttributes: new { title = "Manage" })
-            </li>
-            <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
-        </ul>
+            }
+        </li>
+        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+    </ul>
     }
 }
 else
