Bootstrapper V3 Upgrade Completed + Appropriate Visual UI Updates Implemented

--- a/src/Bloggy.Client.Web/Views/Default/_BlogPostListItemPartial.cshtml
+++ b/src/Bloggy.Client.Web/Views/Default/_BlogPostListItemPartial.cshtml
@@ -6,24 +6,20 @@
                 <strong>@Model.Title</strong>
             </a>
         </h4>
-        <div class="brief-info">
+        <div class="text-info text-info-custom">
             Learn how easy to scale out SignalR with a Redis backplane and simulate a local web farm scenario with IIS Express
         </div>
         <div class="misc">
-            <div class="row">
-                <div class="span2 misc-item">
-                    <span><i class="icon-calendar-empty"></i> 2013-09-23 15:45</span>
+                <div class="well well-sm well-sm-custom">
+                    2013-09-23 15:45, Tugberk Ugurlu
+                    <div class="span5 misc-item" style="float:right;">
+                        <span class="label label-default">SignalR</span>
+                        <span class="label label-default">Redis</span>
+                        <span class="label label-default">ASP.NET</span>
+                        <span class="label label-default">ASP.NET Web API</span>
+                    </div>
                 </div>
-                <div class="span2 misc-item">
-                    <span><i class="icon-user"></i> Tugberk Ugurlu</span>
-                </div>
-                <div class="span5 misc-item">
-                    <span class="badge badge-info">SignalR</span>
-                    <span class="badge badge-info">Redis</span>
-                    <span class="badge badge-info">ASP.NET</span>
-                    <span class="badge badge-info">ASP.NET Web API</span>
-                </div>
-            </div>
+                
         </div>
     </div>
     <div class="span9 content">
