started manage UI for admin users

--- a/src/Bloggy.Client.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/Bloggy.Client.Web/Views/Shared/_LoginPartial.cshtml
@@ -19,6 +19,6 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        <li>@Html.ActionLink("Log In", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
 }
