Various UI / CSS / HTML fixes.

--- a/src/Bloggy.Client.Web/Views/BlogPost/Index.cshtml
+++ b/src/Bloggy.Client.Web/Views/BlogPost/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="row blog-post-list-item">
-    <div
+    <div>
         <h4 class="title">
             <a href="/archive/@Model.BlogPost.Slug">
                 <strong>@Model.BlogPost.Title</strong>
