--- a/src/Bloggy.Client.Web/Views/Shared/_CommentFormPartial.cshtml
+++ b/src/Bloggy.Client.Web/Views/Shared/_CommentFormPartial.cshtml
@@ -34,6 +34,6 @@
     </div>
 }
     
-<div class="control-group">
-    <button class="btn btn-info" type="submit">@StringResources.SendComment</button>
+<div class="control-group controls">
+    <button class="btn btn-info" type="submit" style="margin-top:10px;">@StringResources.SendComment</button>
 </div>
