Route changes and some blogpost page improvements

--- a/src/Bloggy.Client.Web/Views/BlogPost/Index.cshtml
+++ b/src/Bloggy.Client.Web/Views/BlogPost/Index.cshtml
@@ -6,9 +6,9 @@
 }
 
 <div class="row blog-post-list-item">
-    <div
+    <div>
         <h4 class="title">
-            <a href="/archive/@Model.BlogPost.Slug">
+            <a href="#">
                 <strong>@Model.BlogPost.Title</strong>
             </a>
         </h4>
