--- a/src/Bloggy.Client.Web/Views/Shared/_BlogPostListItemPartial.cshtml
+++ b/src/Bloggy.Client.Web/Views/Shared/_BlogPostListItemPartial.cshtml
@@ -16,7 +16,7 @@
                     <div class="span5 misc-item" style="float:right;">
                         @foreach (var tag in Model.Tags)
                         {
-                            <span class="label label-default">
+                            <span class="label label-default linklabel">
                                 <a href="tags/@tag.Slug" style="color:white">@tag.Name</a>
                             </span>
                         }
